--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,7 @@ jobs:
           node-version: 18
           cache: 'npm'
       - name: Install dependencies
-        run: cd client &&  npm install
+        run: npm install
       - name: Build
         run: npm run build
       - name: Setup Pages
